# ATACseq_caller

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pipeline.Dockerfile
backend/: Cargo.toml  Dockerfile
backend/src/: handlers.rs  main.rs  models.rs  routers.rs  state.rs
config/: snakemake.config.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: Sidebar.svelte  Viewer.svelte  types.ts
workflow/: Snakefile
workflow/envs/: duck_db.yaml  genrich.yaml  samtools.yaml  subread.yaml
workflow/scripts/: frip_calculator.py  load_to_db.py
